# object-detection

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  test.py
.github/workflows/: main.yml
alembic/: .env.dev  Dockerfile  env.py  models.py  pyproject.toml
alembic/versions/: 12f04d458dfc_modify_models.py
client/: Dockerfile  package-lock.json  package.json  tailwind.config.js
client/public/: index.html
client/src/: App.jsx  index.css
client/src/components/: Loader.jsx
logstash/pipeline/: kafka-elastic-pipeline.conf
microservices/api_gateway/: .env.dev  Dockerfile  app.py  config.py  pyproject.toml  schemas.py
microservices/object-detection/: Dockerfile  ObjectDetection.py  app.py  config.py  crud.py  database.py  models.py  queries.py  schemas.py
microservices/object_detection/: Dockerfile  app.py  config.py  crud.py  database.py  models.py  object_detection.py  pyproject.toml  utils.py
microservices/object_detection/alembic/: env.py
microservices/object_detection/alembic/versions/: d3276c4f32bc_initial_migration.py
microservices/object_detection/tests/: test_app.py
microservices/reports/: .env.dev  Dockerfile  app.py  config.py  crud.py  database.py  draw_boxes.py  models.py  pyproject.toml  schemas.py  utils.py
